--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "lint": "eslint --fix --ext .js,.ts,.vue . && prettier --write '**/*.{js,ts,md,vue}'"
   },
   "dependencies": {
-    "@builder.io/partytown": "0.2.4",
+    "@builder.io/partytown": "^0.2.4",
     "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
-    "knitwork": "0.1.0",
-    "serve-static": "1.14.2"
+    "jiti": "^1.12.15",
+    "knitwork": "^0.1.0",
+    "serve-static": "^1.14.2"
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
