--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "serve-static": "^1.14.2"
   },
   "devDependencies": {
+    "@release-it/conventional-changelog": "4.1.0",
     "@nuxt/module-builder": "latest",
     "@nuxtjs/eslint-config-typescript": "latest",
     "@types/serve-static": "1.13.10",
     "eslint": "latest",
     "eslint-config-prettier": "^8.3.0",
     "nuxt3": "latest",
-    "prettier": "2.5.1"
+    "prettier": "2.5.1",
+    "release-it": "14.12.4"
   }
 }
