--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "dist"
   ],
   "scripts": {
-    "prepack": "nuxt-module-build",
+    "build": "nuxt-module-build",
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "prepare": "nuxt-module-build --stub && nuxi prepare playground",
+    "prepack": "yarn build",
+    "prepublish": "yarn build",
     "lint": "eslint --fix --ext .js,.ts,.vue . && prettier --write '**/*.{js,ts,md,vue}'"
   },
   "dependencies": {
