--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@builder.io/partytown": "^0.3.1",
     "@nuxt/kit": "npm:@nuxt/kit-edge@^3.0.0-27398533.8edd481",
     "knitwork": "^0.1.0",
-    "serve-static": "^1.14.2"
+    "serve-static": "^1.14.2",
+    "ufo": "^0.7.10"
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
