--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lint": "eslint --fix --ext .js,.ts,.vue . && prettier --write '**/*.{js,ts,md,vue}'"
   },
   "dependencies": {
-    "@builder.io/partytown": "^0.3.6",
+    "@builder.io/partytown": "^0.4.1",
     "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
     "knitwork": "^0.1.0",
     "serve-static": "^1.14.2",
@@ -37,9 +37,9 @@
   "devDependencies": {
     "@nuxt/module-builder": "latest",
     "@nuxtjs/eslint-config-typescript": "latest",
-    "@release-it/conventional-changelog": "4.1.0",
+    "@release-it/conventional-changelog": "4.2.0",
     "@types/serve-static": "1.13.10",
-    "eslint": "latest",
+    "eslint": "8.10.0",
     "eslint-config-prettier": "^8.4.0",
     "nuxt3": "latest",
     "prettier": "2.5.1",
