--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
     "prepack": "yarn build",
     "prepublish": "yarn build",
-    "lint": "eslint --fix --ext .js,.ts,.vue . && prettier --write '**/*.{js,ts,md,vue}'"
+    "lint": "eslint --fix --ext .js,.ts,.vue . && prettier --write '**/*.{js,ts,md,vue}'",
+    "test": "vitest run"
   },
   "dependencies": {
     "@builder.io/partytown": "^0.4.1",
@@ -36,13 +37,18 @@
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
+    "@nuxt/test-utils": "npm:@nuxt/test-utils-edge@latest",
     "@nuxtjs/eslint-config-typescript": "latest",
     "@release-it/conventional-changelog": "4.2.0",
     "@types/serve-static": "1.13.10",
+    "c8": "^7.11.0",
     "eslint": "8.10.0",
     "eslint-config-prettier": "^8.4.0",
     "nuxt3": "latest",
+    "playwright": "^1.19.2",
     "prettier": "2.5.1",
-    "release-it": "14.12.5"
+    "release-it": "14.12.5",
+    "vite": "^2.8.5",
+    "vitest": "^0.5.8"
   }
 }
