--- a/package.json
+++ b/package.json
@@ -31,23 +31,22 @@
     "@builder.io/partytown": "^0.5.2",
     "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
     "knitwork": "^0.1.1",
-    "serve-static": "^1.14.2",
-    "ufo": "^0.7.11"
+    "serve-static": "^1.15.0",
+    "ufo": "^0.8.3"
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
     "@nuxt/test-utils": "npm:@nuxt/test-utils-edge@latest",
-    "@nuxtjs/eslint-config-typescript": "latest",
+    "@nuxtjs/eslint-config-typescript": "9.0.0",
     "@release-it/conventional-changelog": "4.2.2",
     "@types/serve-static": "1.13.10",
     "c8": "^7.11.0",
-    "eslint": "8.11.0",
+    "eslint": "8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "nuxt3": "latest",
-    "playwright": "^1.19.2",
-    "prettier": "2.5.1",
-    "release-it": "14.12.5",
-    "vite": "^2.8.6",
-    "vitest": "^0.6.0"
+    "prettier": "2.6.1",
+    "release-it": "14.14.0",
+    "vite": "^2.9.1",
+    "vitest": "^0.8.1"
   }
 }
