--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
   },
   "dependencies": {
     "@builder.io/partytown": "^0.5.2",
-    "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
+    "@nuxt/kit": "^3.0.0-rc.1",
     "knitwork": "^0.1.1",
     "ufo": "^0.8.3"
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
+    "@nuxt/schema": "^3.0.0-rc.1",
     "@nuxt/test-utils": "npm:@nuxt/test-utils-edge@latest",
     "@nuxtjs/eslint-config-typescript": "9.0.0",
     "@release-it/conventional-changelog": "4.3.0",
@@ -42,7 +43,7 @@
     "c8": "^7.11.0",
     "eslint": "8.13.0",
     "eslint-config-prettier": "^8.5.0",
-    "nuxt3": "latest",
+    "nuxt": "npm:nuxt3@latest",
     "prettier": "2.6.2",
     "release-it": "14.14.2",
     "vite": "^2.9.5",
