feat: experimental support for Nuxt 2 without bridge

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@builder.io/partytown": "^0.6.0",
     "@nuxt/kit": "^3.0.0-rc.1",
     "knitwork": "^0.1.1",
+    "serve-static": "^1.15.0",
     "ufo": "^0.8.4"
   },
   "devDependencies": {
