chore: fix extend

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "github>danielroe/renovate",
+    "github>nuxt/renovate-config-nuxt",
     "packages:linters",
     ":labels(dependencies,devops)",
     ":maintainLockFilesWeekly",
