--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nuxtjs/eslint-config-typescript": "10.0.0",
     "@release-it/conventional-changelog": "5.0.0",
     "@types/serve-static": "1.15.0",
+    "@vitest/coverage-c8": "^0.22.0",
     "c8": "^7.12.0",
     "eslint": "8.22.0",
     "eslint-config-prettier": "^8.5.0",
