--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,45 +14,49 @@ jobs:
 
     strategy:
       matrix:
-        # macos-latest, windows-latest
         os: [ubuntu-latest]
-        node: [14]
+        node: [16]
 
     steps:
+      - uses: actions/checkout@v3
+      - run: corepack enable
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
+          cache: "pnpm"
 
-      - name: checkout
-        uses: actions/checkout@v3
+      - name: 📦 Install dependencies
+        run: pnpm install --frozen-lockfile
 
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+      # From https://github.com/vitejs/vite/blob/main/.github/workflows/ci.yml#L60-L78
+      # Install playwright's binary under custom directory to cache
+      - name: Set Playwright path (non-windows)
+        if: runner.os != 'Windows'
+        run: echo "PLAYWRIGHT_BROWSERS_PATH=$HOME/.cache/playwright-bin" >> $GITHUB_ENV
+      - name: Set Playwright path (windows)
+        if: runner.os == 'Windows'
+        run: echo "PLAYWRIGHT_BROWSERS_PATH=$HOME\.cache\playwright-bin" >> $env:GITHUB_ENV
 
-      - uses: actions/cache@v3
-        id: yarn-cache
+      - name: Cache Playwright's binary
+        uses: actions/cache@v3
         with:
-          path: |
-            ${{ steps.yarn-cache-dir-path.outputs.dir }}
-            C:\Users\runneradmin\AppData\Local\ms-playwright
-            ~/Library/Caches/ms-playwright
-            ~/.cache/ms-playwright
-          key: ${{ runner.os }}-${{ matrix.node }}-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+          # Playwright removes unused browsers automatically
+          # So does not need to add playwright version to key
+          key: ${{ runner.os }}-playwright-bin-v1
+          path: ${{ env.PLAYWRIGHT_BROWSERS_PATH }}
 
-      - name: Install dependencies
-        run: yarn
+      - name: Install Playwright
+        # does not need to explicitly set chromium after https://github.com/microsoft/playwright/issues/14862 is solved
+        run: pnpm playwright install chromium
 
-      - name: Build project
-        run: yarn dev:prepare
+      - name: Stub types
+        run: pnpm dev:prepare
 
       - name: Build project
-        run: yarn build
+        run: pnpm build
 
-      - name: Test
-        run: yarn test --coverage
+      - name: Test built module
+        run: pnpm test --coverage
 
       - name: Coverage
         uses: codecov/codecov-action@v3
