--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,45 +14,28 @@ jobs:
 
     strategy:
       matrix:
-        # macos-latest, windows-latest
         os: [ubuntu-latest]
-        node: [14]
+        node: [16]
 
     steps:
+      - uses: actions/checkout@v3
+      - run: corepack enable
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
+          cache: "pnpm"
 
-      - name: checkout
-        uses: actions/checkout@v3
+      - name: 📦 Install dependencies
+        run: pnpm install --frozen-lockfile
 
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-
-      - uses: actions/cache@v3
-        id: yarn-cache
-        with:
-          path: |
-            ${{ steps.yarn-cache-dir-path.outputs.dir }}
-            C:\Users\runneradmin\AppData\Local\ms-playwright
-            ~/Library/Caches/ms-playwright
-            ~/.cache/ms-playwright
-          key: ${{ runner.os }}-${{ matrix.node }}-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - name: Install dependencies
-        run: yarn
+      - name: Stub types
+        run: pnpm dev:prepare
 
       - name: Build project
-        run: yarn dev:prepare
+        run: pnpm build
 
-      - name: Build project
-        run: yarn build
-
-      - name: Test
-        run: yarn test --coverage
+      - name: Test built module
+        run: pnpm test -- --coverage
 
       - name: Coverage
         uses: codecov/codecov-action@v3
