--- a/package.json
+++ b/package.json
@@ -28,33 +28,34 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@builder.io/partytown": "^0.6.4",
-    "@nuxt/kit": "^3.0.0-rc.8",
+    "@builder.io/partytown": "^0.7.0",
+    "@nuxt/kit": "^3.0.0-rc.9",
     "knitwork": "^0.1.2",
     "serve-static": "^1.15.0",
     "ufo": "^0.8.5"
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
-    "@nuxt/schema": "^3.0.0-rc.8",
+    "@nuxt/schema": "3.0.0-rc.9",
     "@nuxt/test-utils": "npm:@nuxt/test-utils-edge@latest",
-    "@nuxtjs/eslint-config-typescript": "10.0.0",
+    "@nuxtjs/eslint-config-typescript": "11.0.0",
     "@release-it/conventional-changelog": "5.1.0",
     "@types/serve-static": "1.15.0",
     "@vitest/coverage-c8": "^0.22.1",
     "c8": "^7.12.0",
-    "eslint": "8.22.0",
+    "eslint": "8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "nuxt": "npm:nuxt3@latest",
     "prettier": "2.7.1",
-    "release-it": "15.3.0",
-    "typescript": "^4.7.4",
-    "vite": "^2.9.15",
+    "release-it": "15.4.1",
+    "typescript": "^4.8.2",
+    "vite": "^3.0.9",
     "vitest": "^0.22.1",
-    "vue": "^3.2.37"
+    "vue": "^3.2.38"
   },
   "resolutions": {
-    "@nuxtjs/partytown": "link:./"
+    "@nuxtjs/partytown": "link:./",
+    "@nuxt/vite-builder": "npm:@nuxt/vite-builder-edge@latest"
   },
   "packageManager": "pnpm@7.9.3"
 }
