--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@nuxt/module-builder": "latest",
     "@nuxt/schema": "3.0.0-rc.11",
-    "@nuxt/test-utils": "npm:@nuxt/test-utils-edge@latest",
+    "@nuxt/test-utils": "3.0.0-rc.11",
     "@nuxtjs/eslint-config-typescript": "11.0.0",
     "@release-it/conventional-changelog": "5.1.0",
     "@types/serve-static": "1.15.0",
@@ -45,17 +45,16 @@
     "c8": "^7.12.0",
     "eslint": "8.23.1",
     "eslint-config-prettier": "^8.5.0",
-    "nuxt": "npm:nuxt3@latest",
+    "nuxt": "npm:nuxt3@3.0.0-rc.12-27730995.2894a75",
     "prettier": "2.7.1",
     "release-it": "15.4.1",
     "typescript": "^4.8.2",
     "vite": "^3.1.0",
     "vitest": "^0.23.2",
-    "vue": "^3.2.38"
+    "vue": "^3.2.39"
   },
   "resolutions": {
-    "@nuxtjs/partytown": "link:./",
-    "@nuxt/vite-builder": "npm:@nuxt/vite-builder-edge@latest"
+    "@nuxtjs/partytown": "link:./"
   },
   "packageManager": "pnpm@7.12.1"
 }
