--- a/renovate.json
+++ b/renovate.json
@@ -1,28 +1,6 @@
 {
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "github>nuxt/renovate-config-nuxt",
-    "packages:linters",
-    ":labels(dependencies,devops)",
-    ":maintainLockFilesWeekly",
-    ":enableVulnerabilityAlerts",
-    ":automergeLinters",
-    ":automergeTypes",
-    ":automergePatch"
-  ],
-  "rebaseStalePrs": true,
-  "prCreation": "not-pending",
-  "assignees": ["danielroe"],
-  "packageRules": [
-    {
-      "packagePatterns": ["lint"],
-      "groupName": "all lint dependencies",
-      "groupSlug": "all-lint"
-    },
-    {
-      "groupName": "nuxt core",
-      "groupSlug": "nuxt",
-      "matchPackageNames": ["nuxt", "nuxt3"],
-      "matchPackagePatterns": ["^@nuxt/"]
-    }
+    "github>danielroe/renovate"
   ]
 }
