--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@builder.io/partytown": "^0.7.1",
-    "@nuxt/kit": "^3.0.0-rc.12",
-    "knitwork": "^0.1.2",
+    "@builder.io/partytown": "^0.7.2",
+    "@nuxt/kit": "^3.0.0",
+    "knitwork": "^1.0.0",
     "serve-static": "^1.15.0",
-    "ufo": "^0.8.6"
+    "ufo": "^1.0.1"
   },
   "devDependencies": {
-    "@nuxt/module-builder": "latest",
+    "@nuxt/module-builder": "^0.2.1",
     "@nuxt/schema": "3.0.0",
     "@nuxt/test-utils": "3.0.0",
     "@nuxtjs/eslint-config-typescript": "12.0.0",
@@ -45,7 +45,7 @@
     "c8": "7.12.0",
     "eslint": "8.28.0",
     "eslint-config-prettier": "8.5.0",
-    "nuxt": "npm:nuxt3@3.0.0-rc.9-27703329.537338f",
+    "nuxt": "3.0.0",
     "prettier": "2.8.0",
     "release-it": "15.5.0",
     "typescript": "4.9.3",
