--- a/package.json
+++ b/package.json
@@ -39,15 +39,14 @@
     "@nuxt/schema": "3.2.2",
     "@nuxt/test-utils": "3.2.2",
     "@nuxtjs/eslint-config-typescript": "12.0.0",
-    "@release-it/conventional-changelog": "5.1.1",
     "@types/serve-static": "1.15.0",
     "@vitest/coverage-c8": "0.28.5",
+    "bumpp": "^8.2.1",
     "c8": "7.13.0",
     "eslint": "8.34.0",
     "eslint-config-prettier": "8.6.0",
     "nuxt": "3.2.2",
     "prettier": "2.8.4",
-    "release-it": "15.6.0",
     "typescript": "4.9.5",
     "vite": "4.1.1",
     "vitest": "0.28.5",
