--- a/package.json
+++ b/package.json
@@ -40,9 +40,8 @@
     "@nuxt/test-utils": "3.2.2",
     "@nuxtjs/eslint-config-typescript": "12.0.0",
     "@types/serve-static": "1.15.1",
-    "@vitest/coverage-c8": "0.32.2",
+    "@vitest/coverage-v8": "0.32.2",
     "bumpp": "9.1.1",
-    "c8": "7.14.0",
     "eslint": "8.43.0",
     "eslint-config-prettier": "8.8.0",
     "nuxt": "3.2.2",
