--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   },
   "resolutions": {
     "@nuxtjs/partytown": "link:./",
-    "@nuxt/kit": "3.6.5"
+    "@nuxt/schema": "3.6.5"
   },
   "packageManager": "pnpm@8.6.12"
 }
