--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         run: pnpm dev:prepare
 
       - name: Build project
-        run: pnpm build
+        run: pnpm prepack
 
       - name: Test built module
         run: pnpm test -- --coverage
