--- a/package.json
+++ b/package.json
@@ -29,30 +29,30 @@
   },
   "dependencies": {
     "@builder.io/partytown": "^0.10.0",
-    "@nuxt/kit": "^3.8.2",
+    "@nuxt/kit": "^3.11.1",
     "knitwork": "^1.0.0",
     "serve-static": "^1.15.0",
-    "ufo": "^1.3.2"
+    "ufo": "^1.5.3"
   },
   "devDependencies": {
     "@nuxt/module-builder": "0.5.5",
-    "@nuxt/schema": "3.10.3",
-    "@nuxt/test-utils": "3.11.0",
+    "@nuxt/schema": "3.11.1",
+    "@nuxt/test-utils": "3.12.0",
     "@nuxtjs/eslint-config-typescript": "12.1.0",
     "@types/serve-static": "1.15.5",
     "@vitest/coverage-v8": "1.4.0",
-    "bumpp": "9.3.1",
+    "bumpp": "9.4.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
-    "nuxt": "3.10.3",
+    "nuxt": "3.11.1",
     "prettier": "3.2.5",
-    "typescript": "5.3.3",
+    "typescript": "5.4.3",
     "vitest": "1.4.0",
     "vue": "3.4.21"
   },
   "resolutions": {
-    "@nuxtjs/partytown": "link:./",
-    "@nuxt/schema": "3.10.3"
+    "@nuxt/schema": "3.11.1",
+    "@nuxtjs/partytown": "link:./"
   },
-  "packageManager": "pnpm@8.15.4"
+  "packageManager": "pnpm@8.15.5"
 }
