--- a/package.json
+++ b/package.json
@@ -28,30 +28,30 @@
     "release": "bumpp && npm publish"
   },
   "dependencies": {
-    "@builder.io/partytown": "^0.10.0",
-    "@nuxt/kit": "^3.11.1",
-    "knitwork": "^1.0.0",
+    "@builder.io/partytown": "^0.10.2",
+    "@nuxt/kit": "^3.12.4",
+    "knitwork": "^1.1.0",
     "serve-static": "^1.15.0",
-    "ufo": "^1.5.3"
+    "ufo": "^1.5.4"
   },
   "devDependencies": {
-    "@nuxt/module-builder": "0.6.0",
-    "@nuxt/schema": "3.11.1",
-    "@nuxt/test-utils": "3.12.0",
+    "@nuxt/eslint-config": "0.5.0",
+    "@nuxt/module-builder": "0.8.1",
+    "@nuxt/schema": "3.12.4",
+    "@nuxt/test-utils": "3.14.0",
     "@types/serve-static": "1.15.7",
     "@vitest/coverage-v8": "2.0.5",
-    "bumpp": "9.4.2",
-    "eslint": "9.7.0",
-    "nuxt": "3.11.1",
+    "bumpp": "9.5.1",
+    "eslint": "9.9.0",
+    "nuxt": "3.12.4",
     "prettier": "3.3.3",
     "typescript": "5.5.4",
     "vitest": "2.0.5",
-    "vue": "3.4.21",
-    "@nuxt/eslint-config": "0.5.0"
+    "vue": "3.4.37"
   },
   "resolutions": {
-    "@nuxt/schema": "3.11.1",
+    "@nuxt/schema": "3.12.4",
     "@nuxtjs/partytown": "link:./"
   },
-  "packageManager": "pnpm@9.5.0"
+  "packageManager": "pnpm@9.7.0"
 }
