--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
         node: [18]
 
     steps:
@@ -37,7 +37,7 @@ jobs:
         run: pnpm prepack
 
       - name: Test built module
-        run: pnpm test -- --coverage
+        run: pnpm test
 
       - name: Coverage
         uses: codecov/codecov-action@v4
