--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
         node: [18]
 
     steps:
@@ -37,9 +37,10 @@ jobs:
         run: pnpm prepack
 
       - name: Test built module
-        run: pnpm test -- --coverage
+        run: pnpm test
 
       - name: Coverage
+        if: matrix.os != 'windows-latest'
         uses: codecov/codecov-action@v4
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
