--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "release": "bumpp && npm publish"
   },
   "dependencies": {
-    "@builder.io/partytown": "^0.10.2",
     "@nuxt/kit": "^3.12.4",
+    "@qwik.dev/partytown": "^0.11.0",
     "knitwork": "^1.1.0",
     "serve-static": "^1.15.0",
     "ufo": "^1.5.4"
