chore: prefer `nuxt` over `nuxi`

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "dist"
   ],
   "scripts": {
-    "dev": "nuxi dev playground",
-    "dev:build": "nuxi build playground",
-    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
+    "dev": "nuxt dev playground",
+    "dev:build": "nuxt build playground",
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxt prepare playground",
     "prepack": "nuxt-module-build build",
     "lint": "eslint .",
     "test": "vitest run --coverage",
