--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ permissions:
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
 
 jobs:
   release:
@@ -15,11 +15,11 @@ jobs:
       - uses: actions/checkout@v5
         with:
           fetch-depth: 0
-
-      - name: Set node
-        uses: actions/setup-node@v5
+      - run: corepack enable
+      - uses: actions/setup-node@v5
         with:
           node-version: lts/-1
+          cache: "pnpm"
 
       - run: npx changelogithub
         env:
